# lab5

./: .travis.yml  CMakeLists.txt  README.md
.github/workflows/: biuld.yml
